src/test/test-models/good/validate_set_fun_type_named_good.stan
transformed data {
  real x;
  x <- exp(x);
}
parameters {
  real y;
}
model {
  y ~ normal(0,1);
}
