src/test/test-models/bad/get_lp_bad_scope1.stan
transformed data {
  real y;
  y <- get_lp();
}
parameters {
  real z;
}
model {
  z ~ normal(0,1);
}
